--- a/baxter_cpp/CMakeLists.txt
+++ b/baxter_cpp/CMakeLists.txt
@@ -112,7 +112,9 @@ catkin_package(
 ## Build ##
 ###########
 
-set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11" )
+set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O2" )
+set(CMAKE_CXX_COMPILER "/usr/bin/clang++-3.6")
+set(CMAKE_C_COMPILER "/usr/bin/clang-3.6")
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
